[package]
name = "samp-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "samp_crypto"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
samp = { git="https://github.com/Pycckue-Bnepeg/samp-rs" }
log = "0.4.6"
fern = "0.5.7"
threadpool = "1.8.1"

bcrypt = "0.17.0"
rust-argon2 = "2.1.0"
regex = "1.11.1"
